# simple_cpio_filesystem

./: .gitignore  cpiofs.c  cpiofs.h  meson.build  test1.c
test/: build.sh
